5.0.0 -> 5.1a1:
    - jbj: add :utf8 format conversion, use with :cdata format too.
    - jbj: rpmrepo: unsnarl the data from the methods.
    - jbj: rpmrepo: populate repomd.xml.
    - jbj: rpmrepo: populate other.xml, add --yum:other.xml alias.
    - jbj: rpmrepo: populate filelists.xml, add --yum:filelists.xml alias.
    - jbj: rpmrepo: populate primary.xml.
    - jbj: rpmdb: fix: initialize mireRegexec() pattern match buffers.
    - jbj: set the values for the blanks while reading a package.
    - jbj: add get/set methods to fill in remaining blanks in XML mark up.
    - jbj: add :cdata format to permit strings to be included in XML CDATA.
    - jbj: add --yum:primary popt alias to spew a primary.xml approximation.
    - jbj: add header extensions for primary.xml <rpm:entry> markup.
    - jbj: rpmfi: add 2 getter(s) and an additional (stubbed) iterator method.
    - jbj: rpmmtree: functional multi-rooted specifications and verification.
    - rse: fix macro option/argument parsing (again), this time by using POPT_CONTEXT_POSIXMEHARDER
    - afb: fix endianness detection when compiling Mac OS X Universal Binaries.
    - jbj: install rpmmtree in bindir, its at least as functional as mtree(8).
    - jbj: add rpmmtree (from mtree(8) in OpenBSD).
    - jbj; revert the unhelpful & pugly __attribute__((__unused__)) UNUSED() macro.
    - jbj: add -Wno-missing-field-initializers -Wno-unused-parameter to stop spew.
    - jbj: QNX: retrofit u_int32_t typedef where needed.
    - jbj: add random arch name feelgood fluffiness (#432496).
    - jbj: prepare for Fedorable dependency loops (#437041).
    - rse: upgraded from GNU libtool 1.5.x to 2.2
    - jbj: rpmtar: use (if built) rpmtar feeble tests in "make check".
    - jbj: rpmtar: splint annotations.
    - jbj: rpmtar: nuke ttar.c/tdeb.c prototypes for rpmtar.
    - jbj: rpmtar: abuse --format {ar,cpio,tar,ustar} as a selector for now.
    - jbj: rpmtar: lash in -z/-j/-y/-Z compression options using popt.